--- a/mapping_multiple_points/index.html
+++ b/mapping_multiple_points/index.html
@@ -21,6 +21,7 @@
     <!--API KEY-->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!--javascript-->
+    <script type="text/javascript" src="static/js/cities.js"></script>
     <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
