--- a/earthquakes_past7days/index.html
+++ b/earthquakes_past7days/index.html
@@ -23,6 +23,6 @@
     <!--API KEY-->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!--javascript-->
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/logicStep1.js"></script>
 </body>
 </html>
