--- a/earthquakes_challenge/index.html
+++ b/earthquakes_challenge/index.html
@@ -23,6 +23,6 @@
     <!--API KEY-->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!--javascript-->
-    <script type="text/javascript" src="static/js/logicStep6.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
